두번째작업

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-     <div id="box">
-     </div>       
+     <div class="bb">
+        <p>
+            항상 화면의 절반만큼 <br> 처리해야 합니다.
+        </p>
+     </div>     
 </body>
 </html>
