--- a/menu1.html
+++ b/menu1.html
@@ -55,7 +55,7 @@
         }
 
         #gnb li a {
-            padding: 0 0 0 1rem;
+            padding: .375rem 0 .375rem 1rem;
             background-color: orange;
         }
 
