--- a/swiper.html
+++ b/swiper.html
@@ -29,9 +29,9 @@
 
         .swiper_box .slide>div {
             flex-shrink: 0;
-            left: -33%;
             height: 100%;
             position: absolute;
+            transition: all .4s;
         }
 
         .swiper_box .slide .slide1 {
