--- a/example.html
+++ b/example.html
@@ -4,25 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <title>웹디자인 기능사 레이아웃 A-1</title>
     <link rel="stylesheet" href="./css/example.min.css">
 </head>
 
 <body>
-    <header id="header">
-        <div class="container">
-            <h1><a href="#">로고</a></h1>
-            <ul>
-                <li><a href="#">MENU-1</a></li>
-                <li><a href="#">MENU-2</a></li>
-                <li><a href="#">MENU-3</a></li>
-                <li><a href="#">MENU-4</a></li>
-            </ul>
-        </div>
-    </header>
+    <div class="container">
+        <header id="header">
+            <div class="logo">
+                <h1><a href="#">JUST 쇼핑몰</a></h1>
+            </div>
+            <div class="menu">
+                <ul id="gnb">
+                    <li><a href="#">탑</a>
+                    </li>
+                    <li><a href="#">아우터</a></li>
+                    <li><a href="#">팬츠</a></li>
+                    <li><a href="#">악세서리</a></li>
+                </ul>
+            </div>
+        </header>
+        <main id="main">
+            <section class="slider">
+
+            </section>
+            <section class="contents">
+                <div class="c1">
+                    
+                </div>
+                <div class="c2"></div>
+                <div class="c3"></div>
+            </section>
+         </main>
+        <footer id="footer">
+            <div class="f1"></div>
+            <div class="f2"></div>
+            <div class="f3"></div>
+        </footer>
+    </div>
+       
 </body>
 
 </html>
