--- a/site1.html
+++ b/site1.html
@@ -102,6 +102,7 @@
         }
 
         #header #gnb .smenu a:hover {
+            width: 100%;
             background-color: rgb(0,0,255,.4);
         }
 
