가상선택자사용

--- a/site4.html
+++ b/site4.html
@@ -9,14 +9,41 @@
     <script src="./js/web.js"></script>
 </head>
 <body>
-    <header>
-        <div class="container h100 d-flex jcb aic">
-            <h1 class="logo"><a href="#">대한투어</a></h1>
-            <ul class="d-flex">
-                <li><a href="#">해외여행</a></li>
-                <li><a href="#">국내여행</a></li>
-                <li><a href="#">제주도</a></li>
-                <li><a href="#">렌터카</a></li>
+    <header class="bg-check">
+        <div class="container h100 d-flex jcb aic rel">
+            <h1 class="logo d-flex aic"><a href="#">대한투어</a></h1>
+            <ul id="gnb" class="d-flex aic">
+                <li class="rel d1li"><a href="#">짧다</a>
+                    <ul class="abs d2ul w-100">
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                    </ul>
+                </li>
+                <li class="rel d1li"><a href="#">국내여행</a>
+                    <ul class="abs d2ul w-100">
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                    </ul>
+                </li>
+                <li class="rel d1li"><a href="#">나는 좀 길다</a>
+                    <ul class="abs d2ul w-100">
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+
+                    </ul>
+                </li>
+                <li class="rel d1li"><a href="#">렌터카</a>
+                    <ul class="abs d2ul w-100">
+                        <li><a href="#">submenu1</a></li>
+                        <li><a href="#">submenu1</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </header>    
